--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
   <head>
+    <meta charset="utf-8">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= appName %></title>
-    <link rel='stylesheet' href='css/app.css' />
+    <link rel='stylesheet' href='assets/style/app.css' />
+
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
   </head>
   <body>
     <h1><%= appName %></h1>
     <p>Welcome to <%= appName %></p>
+    <p><%= appDescription %></p>
+   
     
-    <script type="text/javascript" src="js/app.js"></script>
+    
+
+
+    <footer><%= authorName %> <span><%= appVersion %></span> </footer>
+    <script type="text/javascript" src="assets/scripts/app.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+	<script>
+	(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+	e.src='//www.google-analytics.com/analytics.js';
+	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+	ga('create','UA-XXXXX-X');ga('send','pageview');
+	</script>
   </body>
 </html>
